--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-# .gitignore
 __pycache__/
 .idea/
 venv/
+.vscode
+.mypy_cache
 
-.env
+app/.env
 .coverage
 
 .DS_Store
 ._.DS_Store
 **/.DS_Store
-**/._.DS_Store.idea/
+**/._.DS_Store
