--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ black = "24.10.0"
 flake8 = "7.1.1"
 mypy = "1.11.2"
 isort = "5.13.2"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
