--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -9,11 +9,21 @@ on:
       - completed
     branches:
       - release
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - release
+  push:
+    branches:
+      - release
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: |
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
+      (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'release') ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/release')
     
     steps:
     - name: Checkout code
