--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -7,15 +7,12 @@ on:
     workflows: ["FastAPI CI"]
     types:
       - completed
-    branches:
-      - release
   pull_request:
-    types: [opened, synchronize, reopened]
     branches:
-      - release
+      - develop
   push:
     branches:
-      - release
+      - develop
 
 jobs:
   build-and-push:
@@ -46,9 +43,9 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:${{ github.ref_name }}-latest
-        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:buildcache
-        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:buildcache,mode=max
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}:${{ github.ref_name }}-latest
+        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}:buildcache
+        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}:buildcache,mode=max
 
   deploy-to-ec2:
     needs: build-and-push
@@ -70,7 +67,7 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
           set -e
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:${{ github.ref_name }}-latest 
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}:${{ github.ref_name }}-latest 
           docker stop fastapi || true 
           docker rm fastapi || true 
-          docker run --name fastapi -d -p 80:${{ secrets.APP_PORT }} ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:${{ github.ref_name }}-latest 
+          docker run --name fastapi -d -p 80:${{ secrets.APP_PORT }} ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}:${{ github.ref_name }}-latest 
