--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -15,10 +15,7 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    if: |
-      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
-      (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'release') ||
-      (github.event_name == 'push' && github.ref == 'refs/heads/release')
+    if: github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success'
     
     steps:
     - name: Checkout code
